# api/admin.py
@@ -1,3 +1,10 @@
 from django.contrib import admin
 
-# Register your models here.
+from .models import Member
+
+
+@admin.register(Member)
+class MemberAdmin(admin.ModelAdmin):
+    list_display = ("id", "username", "email", "created_at")
+    search_fields = ("username", "email")
+    readonly_fields = ("created_at", "updated_at")
